live proving changes for saving in date received folder

--- a/rpa-certificates-of-free-sale/Logic Workflows/ProcessParentCase.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/ProcessParentCase.xaml
@@ -14,7 +14,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1240,741</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1375,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessCase_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -206,7 +206,7 @@
                       <av:PointCollection x:Key="ConnectorLocation">300,1025.5 300,1075.5</av:PointCollection>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <TryCatch DisplayName="Try Enter Loading Details" sap:VirtualizedContainerService.HintSize="651,531" sap2010:WorkflowViewState.IdRef="TryCatch_13">
+                  <TryCatch DisplayName="Try Enter Loading Details" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_13">
                     <TryCatch.Try>
                       <Sequence sap:VirtualizedContainerService.HintSize="410,379" sap2010:WorkflowViewState.IdRef="Sequence_33">
                         <sap:WorkflowViewStateService.ViewState>
@@ -324,7 +324,7 @@
                                   <av:PointCollection x:Key="ConnectorLocation">300,1415.5 300,1475.5</av:PointCollection>
                                 </scg:Dictionary>
                               </sap:WorkflowViewStateService.ViewState>
-                              <TryCatch DisplayName="Try Move to Reference folder" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_14">
+                              <TryCatch DisplayName="Try Move to Reference folder" sap:VirtualizedContainerService.HintSize="459,606" sap2010:WorkflowViewState.IdRef="TryCatch_14">
                                 <TryCatch.Try>
                                   <Sequence sap:VirtualizedContainerService.HintSize="421,379" sap2010:WorkflowViewState.IdRef="Sequence_34">
                                     <sap:WorkflowViewStateService.ViewState>
@@ -334,9 +334,18 @@
                                     </sap:WorkflowViewStateService.ViewState>
                                     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Move to Reference Folder" sap:VirtualizedContainerService.HintSize="379,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_14" UnSafe="False" WorkflowFileName="Data Workflows\FileExplorer\MoveToReferenceFolder.xaml">
                                       <ui:InvokeWorkflowFile.Arguments>
-                                        <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
-                                        <InArgument x:TypeArguments="x:String" x:Key="IN_strReferenceNumber">[OUT_strReferenceNumber]</InArgument>
-                                        <OutArgument x:TypeArguments="x:String" x:Key="OUT_strRefFolderPath">[OUT_strReferenceFolderPath]</OutArgument>
+                                        <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
+                                          <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
+                                        </InArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="IN_strReferenceNumber">
+                                          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="OUT_strReferenceNumber" />
+                                        </InArgument>
+                                        <OutArgument x:TypeArguments="x:String" x:Key="OUT_strRefFolderPath">
+                                          <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strReferenceFolderPath" />
+                                        </OutArgument>
+                                        <InArgument x:TypeArguments="x:String" x:Key="IN_strDateReceived">
+                                          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDateReceived" />
+                                        </InArgument>
                                       </ui:InvokeWorkflowFile.Arguments>
                                       <sap:WorkflowViewStateService.ViewState>
                                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
